--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ cachetools==5.5.2
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
-chromadb==1.0.20
+chromadb>=1.0.20
 click==8.2.1
 coloredlogs==15.0.1
 comm==0.2.3
@@ -147,13 +147,13 @@ sniffio==1.3.1
 SQLAlchemy==2.0.43
 stack-data==0.6.3
 streamlit==1.49.1
-sympy==1.14.0
+sympy
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.11.0
 tokenizers==0.22.0
 toml==0.10.2
-torch==2.2.2
+torch==2.5.1
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -174,3 +174,4 @@ Whoosh==2.7.4
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.24.0
+pysqlite3-binary>=0.4.0
